[package]
name = "broker"
version = "0.1.0"
authors = ["Roman <chistiakov@group-ib.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web="3.3.2"
actix-rt="1.1.1"
futures="0.3.15"
lazy_static = "1.4.0"
serde = "1.0.126"
